--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
+    "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "autoprefixer": "^10.4.16",
