--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
